Moved header to Header.vue. Refactored some SASS.

--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -28,4 +28,5 @@ $sans-serif-font-family: "Raleway", sans-serif !default;
 $monospace-font-family: "Share Tech Mono", monospace !default;
 
 // Dimensions
+$breakpoint: 680px;
 $horizontal-padding: 20%;
