Improved header styling when beneath breakpoint

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -50,6 +50,10 @@ header {
       &:not(.shown) {
         display: none;
       }
+
+      &.shown{
+        border-top: 1px solid $tundora;
+      }
     }
   }
 
