Refactored CSS for header

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,10 +1,6 @@
 // ---------------------------------------------------------------------------
 // Contains all styles related to the header of this site
 // ---------------------------------------------------------------------------
-
-$header-img-size: 45px;
-$header-img-vertical-padding: 5px;
-
 header {
   display: flex;
   width: 100%;
@@ -12,17 +8,18 @@ header {
   left: 0;
 
   // Horizontal padding to make sure elements aren't at the edges
-  @media screen and (min-width: $breakpoint) {
-    padding: 0 $horizontal-padding;
-    box-sizing: border-box;
-  }
+  padding: 0 $horizontal-padding;
+  box-sizing: border-box;
 
   position: fixed; // Make the navigation bar stay at the top of the page
   background-color: $color-background-inverse;
 
+  img{
+    height: 45px;
+    padding: 5px 0;
+  }
+
   .logo {
-    height: $header-img-size;
-    padding: $header-img-vertical-padding 0;
     margin-right: 10px;
 
     @media screen and (max-width: $breakpoint) {
@@ -33,8 +30,6 @@ header {
   // Dropdown menu (only shown when the view is smaller than the breakpoint)
   .menu-dropdown {
     display: none;
-    height: $header-img-size;
-    padding: $header-img-vertical-padding 0;
     float: right;
 
     @media screen and (max-width: $breakpoint) {
@@ -47,18 +42,18 @@ header {
     width: 100%;
 
     @media screen and (max-width: $breakpoint) {
+      border-top: 1px solid $tundora;
+
       &:not(.shown) {
         display: none;
-      }
-
-      &.shown{
-        border-top: 1px solid $tundora;
       }
     }
   }
 
   @media screen and (max-width: $breakpoint) {
     display: inline;
+    padding: 0;
+    box-sizing: content-box;
   }
 }
 
@@ -77,6 +72,10 @@ header {
       text-decoration: none;
       color: $color-text-on-inverse;
 
+      &.item--right {
+        float: right;
+      }
+
       &:hover {
         color: $color-accent;
       }
@@ -90,14 +89,6 @@ header {
         width: 100%;
         float: none;
         box-sizing: border-box;
-      }
-    }
-
-    &.item--right {
-      float: right;
-
-      @media screen and (max-width: $breakpoint) {
-        float: none;
       }
     }
   }
