--- a/src/sass/base/_typeface.scss
+++ b/src/sass/base/_typeface.scss
@@ -2,6 +2,42 @@
 // Contains everything to do with typeface (headline, body, caption, etc.)
 // ---------------------------------------------------------------------------
 
+h1{
+  font-family: $serif-font-family;
+  font-size: 102px;
+  font-weight: 300;
+  line-height: 1.2;
+  letter-spacing: -1.5px;
+}
+
+h2{
+  font-family: $serif-font-family;
+  font-size: 64px;
+  font-weight: 300;
+  line-height: 1.2;
+  letter-spacing: -0.5px;
+}
+
+h3{
+  font-family: $serif-font-family;
+  font-size: 51px;
+  font-weight: 400;
+  line-height: 1.2;
+  letter-spacing: 0px;
+}
+
+h4{
+  font-family: $serif-font-family;
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 1.2;
+  letter-spacing: -0.25px;
+}
+
 body {
   font-family: $sans-serif-font-family;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.6;
+  letter-spacing: 0.5px;
 }
