Slightly smaller header

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -15,7 +15,7 @@ header {
   background-color: $color-background-inverse;
 
   img{
-    height: 45px;
+    height: 40px;
     padding: 8px 0;
   }
 
@@ -66,7 +66,7 @@ header {
     a {
       display: block;
       float: left;
-      padding: 16px 16px;
+      padding: 13.5px;
       text-align: center;
       text-decoration: none;
       color: $color-text-on-inverse;
