--- a/src/sass/base/_typeface.scss
+++ b/src/sass/base/_typeface.scss
@@ -3,7 +3,7 @@
 // ---------------------------------------------------------------------------
 
 h1{
-  font-family: $serif-font-family;
+  font-family: $heading-font-family;
   font-size: 64px;
   font-weight: 300;
   line-height: 1.2;
@@ -11,7 +11,7 @@ h1{
 }
 
 h2{
-  font-family: $serif-font-family;
+  font-family: $heading-font-family;
   font-size: 51px;
   font-weight: 400;
   line-height: 1.2;
@@ -19,7 +19,7 @@ h2{
 }
 
 h3{
-  font-family: $serif-font-family;
+  font-family: $heading-font-family;
   font-size: 36px;
   font-weight: 400;
   line-height: 1.2;
@@ -27,15 +27,15 @@ h3{
 }
 
 h4{
-  font-family: $serif-font-family;
-  font-size: 25px;
+  font-family: $heading-font-family;
+  font-size: 24px;
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0px;
 }
 
 body {
-  font-family: $sans-serif-font-family;
+  font-family: $body-font-family;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.6;
