--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,7 @@
 @import "layouts/header";
 @import "layouts/footer";
 
-// Modules
-
 // Page-specific styles
+@import "pages/about";
+
+// Components
