--- a/src/sass/base/_typeface.scss
+++ b/src/sass/base/_typeface.scss
@@ -2,42 +2,35 @@
 // Contains everything to do with typeface (headline, body, caption, etc.)
 // ---------------------------------------------------------------------------
 
-h1{
-  font-family: $heading-font-family;
-  font-size: 64px;
-  font-weight: 300;
-  line-height: 1.2;
-  letter-spacing: -0.5px;
+@mixin text($font-family, $font-size, $font-weight, $line-height, $letter-spacing) {
+  font-family: $font-family;
+  font-size: $font-size;
+  font-weight: $font-weight;
+  line-height: $line-height;
+  letter-spacing: $letter-spacing;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  color: $color-text-on-background;
 }
 
-h2{
-  font-family: $heading-font-family;
-  font-size: 51px;
-  font-weight: 400;
-  line-height: 1.2;
-  letter-spacing: 0px;
+h1 {
+  @include text($heading-font-family, 32px, 400, 1.2, -0.25px);
+  margin: 50px 0 25px 0;
+  text-align: center;
 }
 
-h3{
-  font-family: $heading-font-family;
-  font-size: 36px;
-  font-weight: 400;
-  line-height: 1.2;
-  letter-spacing: -0.25px;
+h2 {
+  @include text($heading-font-family, 64px, 300, 1.2, -0.5px);
 }
 
-h4{
-  font-family: $heading-font-family;
-  font-size: 24px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0px;
+h3 {
+  @include text($heading-font-family, 42px, 400, 1.2, 0);
+}
+
+h4 {
+  @include text($heading-font-family, 28px, 500, 1.2, 0);
 }
 
 body {
-  font-family: $body-font-family;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.6;
-  letter-spacing: 0.5px;
+  @include text($body-font-family, 16px, 400, 1.6, 0.5px);
 }
