--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,7 +7,7 @@
 @import "base/typeface";
 
 // Layout
-@import "layouts/all";
+@import "layouts/content";
 @import "layouts/header";
 @import "layouts/footer";
 
