Changed color scheme Overhauled all colors Improved Home page

--- a/src/sass/base/_typeface.scss
+++ b/src/sass/base/_typeface.scss
@@ -10,7 +10,7 @@
   letter-spacing: $letter-spacing;
   margin-block-start: 0;
   margin-block-end: 0;
-  color: $color-text-on-background;
+  color: $color-on-background;
 }
 
 h1 {
