--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -2,31 +2,39 @@
 // Contains all site-wide Sass variables
 // ---------------------------------------------------------------------------
 
-// Colors
+// Colors - Greyscale
+$mineshaft: #222;
+$tundora: #444;
+$gray: #888;
+$gallery: #eee;
+$alabaster: #f7f7f7;
 
-// Greyscale
-$mineshaft: #222 !default;
-$tundora: #444 !default;
-$gallery: #eee !default;
-$alabaster: #f7f7f7 !default;
+// Colors - full color
+$malibu: #6ab7ff;
+$curious-blue: #1E88E5;
+$endeavour: #005cb2;
 
-// Color
-$purple-heart: #8a2be2;
+// Colors - Semantics
+$color-background: $alabaster;
+$color-background-variant: $gallery;
 
-// Semantic
-$color-background: $alabaster !default;
-$color-background-dark: $gallery !default;
-$color-text-on-background: $tundora !default;
-$color-text-on-background-dark: $mineshaft !default;
+$color-base: $tundora;
+$color-base-variant: $mineshaft;
 
-$color-accent: $purple-heart;
+$color-accent: $curious-blue;
+$color-accent-variant: $endeavour;
+
+$color-on-background: $tundora;
+$color-on-background-variant: $mineshaft;
+$color-on-base: $gallery;
+$color-on-base-variant: $gray;
 
 // Font Families
 @import url("https://fonts.googleapis.com/css?family=Oswald|Raleway|Share+Tech+Mono&display=swap");
 
-$heading-font-family: "Oswald", sans-serif !default;
-$body-font-family: "Raleway", sans-serif !default;
-$code-font-family: "Share Tech Mono", monospace !default;
+$heading-font-family: "Oswald", sans-serif;
+$body-font-family: "Raleway", sans-serif;
+$code-font-family: "Share Tech Mono", monospace;
 
 // Dimensions
 $horizontal-padding: 22%;
