--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -3,7 +3,8 @@
 // ---------------------------------------------------------------------------
 
 .button {
-  padding: 16px 32px;
+  display: inline-block;
+  padding: 12px 24px;
   margin: 4px 2px;
   border: 2px solid $color-accent;
   background-color: transparent;
