--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -3,14 +3,16 @@
 // ---------------------------------------------------------------------------
 
 #home {
-  background-image: linear-gradient($purple-heart, $mineshaft);
+  height: 100%;
+  width: 100%;
+  background-color: $color-base-variant;
 
   #greeting {
     margin: 0;
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
-	transform: translate(-50%, -50%);
-	text-align: center;
+    transform: translate(-50%, -50%);
+    text-align: center;
   }
 }
