Improved coloring of greeting

--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -5,8 +5,8 @@
 // Colors - Greyscale
 $mineshaft: #222;
 $tundora: #444;
-$gray: #888;
-$gallery: #eee;
+$gray: #777;
+$gallery: #ddd;
 $alabaster: #f7f7f7;
 
 // Colors - full color
