--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -14,5 +14,13 @@
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+
+    h2 {
+      color: $color-on-base;
+    }
+
+    span {
+      color: $color-on-base-variant;
+    }
   }
 }
