--- a/src/sass/layouts/_content.scss
+++ b/src/sass/layouts/_content.scss
@@ -13,8 +13,10 @@ body {
 }
 
 #content {
+  min-height: calc(100vh - 104px);    // Screen height - header height (56px) - footer height (48px)
   flex: 1 0 auto;
   margin: 56px 0 0 0;
+  background-color: $color-background;
 }
 
 .background-dark {
