--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -18,7 +18,7 @@ footer {
   span {
     float: left;
     margin: 11.5px 0;
-    color: $alabaster;
+    color: $color-on-base;
 
     @media screen and (max-width: $breakpoint) {
       display: block;
