--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,6 +13,7 @@
 
 // Components
 @import "components/button";
+@import "components/about/experience";
 
 // Page-specific styles
 @import "pages/about";
