--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -16,7 +16,8 @@
     text-align: center;
 
     #name {
-      @include text($heading-font-family, 4rem, 300, 1.2, -0.5px, none, $color-on-base);
+      @include text($heading-font-family, 4rem, 300, 1.2, -0.5px, none);
+      color: $color-on-base;
     }
 
     span {
