--- a/src/sass/pages/_about.scss
+++ b/src/sass/pages/_about.scss
@@ -108,8 +108,9 @@
       }
 
       img{
-        height: 150px;
+        height: 175px;
         border-radius: 50%;
+        margin-right: 32px;
       }
     }
   }
