--- a/src/sass/pages/_about.scss
+++ b/src/sass/pages/_about.scss
@@ -75,6 +75,22 @@
       overflow: hidden;
       list-style-type: none;
 
+      @mixin interest-group-bottom-borders($width){
+        display: inline-block;
+        vertical-align: bottom;
+        content: "";
+        border-bottom: 1px solid $color-on-background;
+        width: $width;
+      }
+
+      &:before {
+        @include interest-group-bottom-borders(32px);
+      }
+
+      &:after{
+        @include interest-group-bottom-borders(144px);
+      }
+
       li {
         display: inline-block;
         padding: 8px;
@@ -83,11 +99,12 @@
         background-color: $color-background-variant;
         cursor: pointer;
 
-        &:nth-child(n + 2){
+        &:nth-child(n + 2) {
           margin-left: -1px;
         }
 
-        &.active{
+        &.active {
+          color: $color-accent;
           height: 50px;
           border-bottom: 0px;
           background-color: $color-background;
@@ -95,19 +112,19 @@
       }
     }
 
-    #interest{
+    #interest {
       margin: 0;
       padding: 0;
       overflow: hidden;
       list-style-type: none;
 
-      li{
+      li {
         margin: 24px 0;
         display: flex;
         align-items: center;
       }
 
-      img{
+      img {
         height: 175px;
         border-radius: 50%;
         margin-right: 32px;
