--- a/src/sass/pages/_about.scss
+++ b/src/sass/pages/_about.scss
@@ -122,10 +122,15 @@
         margin: 24px 0;
         display: flex;
         align-items: center;
+        border-bottom: 1px solid $color-background-variant;
+
+        &:last-child{
+          border-bottom: 0;
+        }
       }
 
       img {
-        height: 175px;
+        height: 200px;
         border-radius: 50%;
         margin-right: 32px;
       }
