--- a/src/sass/pages/_about.scss
+++ b/src/sass/pages/_about.scss
@@ -119,18 +119,17 @@
       list-style-type: none;
 
       li {
-        margin: 24px 0;
+        padding: 16px 0;
         display: flex;
         align-items: center;
-        border-bottom: 1px solid $color-background-variant;
 
-        &:last-child{
-          border-bottom: 0;
+        &:not(:last-child){
+          border-bottom: 1px solid $color-background-variant;
         }
       }
 
       img {
-        height: 200px;
+        height: 150px;
         border-radius: 50%;
         margin-right: 32px;
       }
