--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -37,5 +37,11 @@ $heading-font-family: "Oswald", sans-serif;
 $body-font-family: "Raleway", sans-serif;
 $code-font-family: "Share Tech Mono", monospace;
 
+// Official breakpoints
+$breakpoint-mobile: 480px;
+$breakpoint-tablet: 768px;
+$breakpoint-laptop: 1200px;
+
 // Dimensions
-$horizontal-padding: 22%;
+$horizontal-padding: 20%;
+$horizontal-padding-small: 5%;
