--- a/src/sass/base/_typeface.scss
+++ b/src/sass/base/_typeface.scss
@@ -37,7 +37,7 @@
 
 h1 {
   @include text($heading-font-family, 2.6rem, 400, 1.2, -0.25px, uppercase);
-  @include centered-heading(2px, 4rem, $color-on-background, 2rem);
+  @include centered-heading(2px, 4rem, $color-on-background, 2%);
 }
 
 h2 {
@@ -56,6 +56,10 @@ h4 {
 html {
   @include text($body-font-family, 18px, 400, 1.5, 0.5px);
   color: $color-on-background;
+
+  @media screen and (max-width: $breakpoint-mobile){
+    font-size: 14px;
+  }
 }
 
 a:link {
