--- a/src/sass/pages/_about.scss
+++ b/src/sass/pages/_about.scss
@@ -5,17 +5,39 @@
 #about {
   > section {
     padding: 48px $horizontal-padding;
+
+    @media screen and (max-width: $breakpoint-laptop) {
+      padding: 24px $horizontal-padding-small;
+    }
   }
 
   #intro {
+    $breakpoint: 1300px;      // Unique breakpoint for intro
     display: flex;
     align-items: center;
 
+    @media screen and (max-width: $breakpoint) {
+      display: block;
+    }
+
     img {
+      width: 80%;
       max-width: 400px;
       margin-right: 36px;
-
       border-radius: 50%;
+
+      @media screen and (max-width: $breakpoint) {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 24px;
+      }
+    }
+
+    p {
+      @media screen and (max-width: $breakpoint) {
+        text-align: center;
+      }
     }
   }
 
@@ -26,26 +48,26 @@
     }
 
     #timeline {
-      display: inline-block;
-      min-width: 350px;
       border-left: 1.2px solid $color-on-background;
       margin: 0;
       padding: 0;
-      overflow: hidden;
       list-style-type: none;
 
       li {
+        position: relative;
         margin: 12px 12px;
         cursor: pointer;
 
         &:before {
+          display: block;
           position: absolute;
           height: 6px;
           width: 6px;
+          left: -16px;
+          top: calc(50% - 6px);
           background-color: $color-background-variant;
           border: 1.2px solid $color-on-background;
           border-radius: 75px;
-          transform: translate(-16px, 10px);
           content: "";
         }
 
@@ -53,7 +75,7 @@
           color: $color-accent;
 
           &:before {
-            border: 1.2px solid $color-accent;
+            border-color: $color-accent;
           }
         }
       }
@@ -75,7 +97,7 @@
       overflow: hidden;
       list-style-type: none;
 
-      @mixin interest-group-bottom-borders($width){
+      @mixin interest-group-bottom-borders($width) {
         display: inline-block;
         vertical-align: bottom;
         content: "";
@@ -87,7 +109,7 @@
         @include interest-group-bottom-borders(32px);
       }
 
-      &:after{
+      &:after {
         @include interest-group-bottom-borders(144px);
       }
 
@@ -123,13 +145,14 @@
         display: flex;
         align-items: center;
 
-        &:not(:last-child){
+        &:not(:last-child) {
           border-bottom: 1px solid $color-background-variant;
         }
       }
 
       img {
-        height: 150px;
+        width: 25%;
+        max-width: 150px;
         border-radius: 50%;
         margin-right: 32px;
       }
