--- a/src/sass/pages/_about.scss
+++ b/src/sass/pages/_about.scss
@@ -42,6 +42,8 @@
     }
 
     #timeline {
+      min-height: 360px;
+      max-width: 300px;
       padding: 0;
       margin: 0;
       list-style-type: none;
@@ -75,7 +77,7 @@
     }
 
     #description {
-      margin: 16px;
+      margin: 12px;
 
       ul {
         padding-left: 24px;
@@ -89,6 +91,8 @@
       }
 
       #timeline {
+        min-height: none;
+        max-width: none;
         white-space: nowrap;
         overflow: auto;
         border-left: 0;
