--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -6,7 +6,6 @@ $breakpoint: 520px;
 
 footer {
   width: 100%;
-  flex-shrink: 0;
   padding: 0 $horizontal-padding;
   box-sizing: border-box;
   background-color: $color-base;
@@ -21,9 +20,8 @@ footer {
     color: $color-on-base;
 
     @media screen and (max-width: $breakpoint) {
-      display: block;
       width: 100%;
-      margin: auto;
+      margin: 4px 0;
     }
   }
 
@@ -35,9 +33,8 @@ footer {
     list-style-type: none;
 
     @media screen and (max-width: $breakpoint) {
-      display: block;
       width: 100%;
-      margin: auto;
+      margin: 0;
     }
 
     li {
@@ -46,7 +43,17 @@ footer {
 
     a {
       display: block;
-      padding: 5px 5px;
+      padding: 5px;
+
+      @media screen and (max-width: $breakpoint-mobile){
+        padding: 2px;
+      }
+    }
+
+    img {
+      @media screen and (max-width: $breakpoint-mobile) {
+        height: 28px;
+      }
     }
   }
 }
