--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -17,7 +17,7 @@ header {
   background-color: $color-base-variant;
   z-index: 1;
 
-  @media screen and (max-width: $breakpoint-tablet){
+  @media screen and (max-width: $breakpoint-tablet) {
     padding: 0 $horizontal-padding-small;
   }
 
@@ -28,7 +28,7 @@ header {
 
   img {
     height: 40px;
-    padding: 8px 0;
+    padding: 6px 0;
     vertical-align: bottom;
     margin: 0 12px;
   }
@@ -60,7 +60,7 @@ header {
     list-style-type: none;
 
     a {
-      display: block;
+      position: relative;
       float: left;
       padding: 12.5px;
       text-align: center;
@@ -79,9 +79,27 @@ header {
         color: $color-accent;
       }
 
+      &:after {
+        position: absolute;
+        top: 48px;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        height: 4px;
+        width: 0px;
+        background: transparent;
+        transition: width 0.3s ease, background-color 0.3s ease;
+        content: "";
+      }
+
       &.router-link-active {
-        border-bottom: 4px solid $color-accent;
         color: $color-accent;
+
+        &:after {
+          width: 100%;
+          background-color: $color-accent;
+        }
       }
 
       @media screen and (max-width: $breakpoint) {
