--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -8,7 +8,8 @@
   background-color: $color-base-variant;
 
   #background-image{
-    height: 700px;
+    width: 85%;
+    max-width: 700px;
     position: absolute;
     top: 50%;
     left: 50%;
